<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knowing</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_home">Main</string>
    <string name="menu_fav">My Favorite</string>
    <string name="menu_add">Ask Question</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_search">Search</string>
    <string name="sort_label">Choose Sort By:</string>
    <string name="question_title">Question Title</string>
    <string name="fav_question">Favoriate Questions</string>
    <string name="local_question">Local Questions</string>
    <string name="my_question">My Questions</string>
    <string name="waiting_list">Waiting List</string>
    <string name="most_voteQ">Most Upvoted Question:</string>
    <string name="most_voteA">Most Upvoted Answer:</string>
    <string name="current_question">Current Question List:</string>
    <string name="save">Save</string>
    <string name="favorite">Fav</string>
    <string name="upvote">Upvote</string>
    <string name="reply">Reply</string>
    <string name="add_reply">Add Reply</string>
    <string name="search">Search</string>
    <string name="answer">Answer</string>
    <string name="answer1">Answer:</string>
    <string name="add_answer">Add Answer</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="reply_group">Reply</string>
    <string name="title">Title:</string>
    <string name="content">Content:</string>
    <string name="author_name">Author Name</string>
    <string name="desc">Author Name</string>

    <string-array name="list_type">
        <item>Sort By Date</item>
        <item>Sort By Picture</item>
        <item>Sort By Score</item>
        <item>Sort By Question Upvote</item>
        <item>Sort By Answer Upvote</item>
    </string-array>

    <string name="title_activity_question_detail">Question Detail</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_input">Add a Question</string>
    <string name="time">time </string>
    <string name="upvote_state">Upvote: 0</string>
    <string name="answer_state">Answer: 0 </string>
    <string name="single_question">Question decription</string>
    <string name="single_answer">Answer Content</string>

    <color name="menu_clicked">#33b5e5</color>
    <color name="White">#FFFFFF</color>
    <color name="question_selected">#CCCCCC</color>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_internet_test">InternetTestActivity</string>
    <string name="title_activity_my_question">My Questions</string>
    <string name="title_activity_create_answer">Create Answer</string>
    <string name="title_activity_create_question_reply">Create Reply</string>
    <string name="title_activity_create_answer_reply">Create Reply</string>
    <string name="title_activity_my_favorite">My Favorite Questions</string>
    <string name="header_hint_normal">Pull down to refresh</string>
    <string name="header_hint_ready">release to refresh</string>
    <string name="header_hint_loading">Updating...</string>
    <string name="header_last_time">Last Update Time：</string>
    <string name="footer_hint_normal">Pull up to view more</string>
    <string name="footer_hint_ready">release to load more</string>
    <string name="title_activity_my_local">MyLocalActivity</string>
    <string name="title_activity_waiting_list">WaitingListActivity</string>

</resources>