<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.ualberta.app.activity.CreateAnswerActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_answer_menu" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/answer_content_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/content" />

            <EditText
                android:id="@+id/answer_content_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/answer_content_textView"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/answer_image_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/answer_content_editText"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/desc"
                android:src="@android:drawable/gallery_thumb" />
        </RelativeLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/create_answer_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/toolbar_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/submit_answer_button"
            style="@style/create_menu_bottom"
            android:layout_height="fill_parent"
            android:onClick="submit_answer"
            android:text="@string/submit" />

        <RadioButton
            android:id="@+id/cancel_answer_button"
            style="@style/create_menu_bottom"
            android:layout_height="fill_parent"
            android:onClick="cancel_answer"
            android:text="@string/cancel" />

        <RadioButton
            android:id="@+id/take_answer_pic"
            style="@style/create_menu_bottom"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:drawableLeft="@drawable/photo_icon32"
            android:onClick="take_answer_pic" />

        <RadioButton
            android:id="@+id/add_answer_pic"
            style="@style/create_menu_bottom"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:drawableLeft="@drawable/picture_icon32"
            android:onClick="select_answer_pic" />
    </RadioGroup>

</RelativeLayout>