<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/answerContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/answerContentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#696969"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/answerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc"
                android:src="@android:drawable/gallery_thumb" />
        </LinearLayout>

        <TextView
            android:id="@+id/answer_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/answerContent"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/answerContent"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:gravity="center|right"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/answer_time_textView"
            android:layout_below="@+id/answer_time_textView"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/upvote_button"
                    style="@style/fav_save_upvote_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/hand_pro_icon32"
                    android:text="@string/upvote"
                    android:textColor="#696969" />

                <TextView
                    android:id="@+id/upvoteStateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/upvote_state"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#696969"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/authorNameTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:textColor="#696969" />
        </LinearLayout>
    </RelativeLayout>

    <RadioButton
        android:id="@+id/answer_reply_button"
        style="@style/answer_reply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer_layout"
        android:text="@string/add_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#696969" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer_reply_button"
        android:background="@drawable/separator" />

</RelativeLayout>